--- a/templatemo_556_catalog_z/css/templatemo-style.css
+++ b/templatemo_556_catalog_z/css/templatemo-style.css
@@ -148,12 +148,12 @@ a {
     text-decoration: none;
     transition: all 0.3s ease; 
 }
-a:hover { color:#009999; }
+a:hover { color:#FF9900; }
 .container-fluid { max-width: 1770px; }
 .tm-container-small { max-width: 1050px; }
 .btn { border-radius: 0; }
 .btn-primary {
-    background-color: #009999;
+    background-color: #FF9900;
     border: 0;
     border-radius: 5px;
     padding: 12px 50px 14px;
@@ -162,12 +162,12 @@ a:hover { color:#009999; }
 
 .btn-primary:hover,
 .btn-primary:focus {
-    background-color:#086969;
+    background-color:#FF9900;
 }
 
 .btn-primary.disabled, 
 .btn-primary:disabled {
-    background-color: #009999;
+    background-color: #FF9900;
     pointer-events: all;
     cursor: not-allowed;
 }
