--- a/FirstWork/css/templatemo-style.css
+++ b/FirstWork/css/templatemo-style.css
@@ -194,7 +194,7 @@ a:hover { color:#FF9900; }
 
 .tm-hero {
     min-height: 200px;
-    background: transparent;
+    background-color: #030c17;
 }
 
 .tm-mt-60 { margin-top: 60px; }
@@ -323,10 +323,7 @@ p, .tm-text-gray { color: #999; }
 	opacity: 0;
 }
 
-.tm-video-item h2 {
-    word-spacing: -0.15em;
-    font-weight: 300;
-}
+
 
 .tm-video-item h2,
 .tm-video-item p {
@@ -448,10 +445,7 @@ figure.effect-ming:hover img { opacity: 0.4; }
     justify-content: center;
 }
 
-.tm-social-links li a:hover {
-    color: #fff;
-    background-color: #009999;
-}
+
 
 .tm-footer { font-size: 0.95rem; }
 .tm-footer-title { font-size: 1.4rem; }
@@ -514,7 +508,7 @@ select:not([multiple]) {
     -moz-appearance: none;
     background-position: right 15px center;
     background-repeat: no-repeat;
-    background-image: url(../img/select-arrow.png);
+    background-image: url(img/select-arrow.png);
     padding: 14px 20px;
     padding-right: 20px;
     color: #666;
@@ -563,10 +557,7 @@ select:not([multiple]) {
     transition: all 0.3s ease;
 }
 
-.tm-social li a:hover i {
-    color: #fff;
-    background-color: #009999;
-}
+
 
 .form-control,
 input:-internal-autofill-selected,
